began working on left section

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -36,16 +36,30 @@
 		<!-- List of locations and stuff -->
 		<section class="locations">
 
+			<!-- Location name input thing -->
+			<h1>location</h1>
+			<input type="text" placeholder="Enter your general area">
+
+			<!-- Found local establishments -->
+			<div class="establishments">
+				<div class="no-establishments">
+					<p>Please enter a location to get results.</p>
+				</div>
+			</div>
+
 		</section>
 
 		<!-- Map showing the locations -->
 		<section class="map">
-
+			<h1>map</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium ducimus minima? Itaque id ducimus nihil deleniti vel quidem recusandae saepe commodi eveniet quisquam qui, quaerat quasi odio ratione excepturi.</p>
 		</section>
 
 		<!-- food preferences -->
-		<section class="whitelist">
-
+		<!-- TODO: Rename class -->
+		<section class="preferences">
+			<h1>preferences</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium ducimus minima? Itaque id ducimus nihil deleniti vel quidem recusandae saepe commodi eveniet quisquam qui, quaerat quasi odio ratione excepturi.</p>
 		</section>
 
 	</main>
