--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="./style/style.css">
 	<link rel="stylesheet" href="./style/layout.css">
 	<link rel="stylesheet" href="./style/elements.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
 </head>
 
@@ -38,13 +39,70 @@
 
 			<!-- Location name input thing -->
 			<h1>location</h1>
-			<input type="text" placeholder="Enter your general area">
+			<input type="text" placeholder="Enter your general area" autofocus>
 
 			<!-- Found local establishments -->
 			<div class="establishments">
-				<div class="no-establishments">
-					<p>Please enter a location to get results.</p>
+
+				<!-- When there is no search thingy this message will be shown -->
+				<!--!broken -->
+				<!--
+				<div class="no-establishments hidden">
+					<p>Please enter a location above to get results.</p>
 				</div>
+				-->
+
+				<!-- When there are search results this will be shown -->
+				<div class="establishment-card">
+					<h2>Name of the place</h2>
+					<ul>
+						<li><p>Fully customizable</p></li>
+						<li><p>Has items on your whitelist</p></li>
+						<li><p>Simple items available</p></li>
+					</ul>
+					<div class="info">
+
+						<!-- Buttons to get the menu, and website  -->
+						<button>Menu</button>
+						<a href="#">Website</a>
+
+						<!-- Thing showing average rating in terms of 5 stars -->
+						<div class="star-container">
+							<p>
+								<i class="fa-solid fa-star"></i>
+								<i class="fa-solid fa-star"></i>
+								<i class="fa-solid fa-star"></i>
+								<i class="fa-solid fa-star"></i>
+								<i class="fa-solid fa-star"></i>
+							</p>
+						</div>
+					</div>
+				</div>
+				
+				<div class="establishment-card">
+					<h2>Name of the place</h2>
+					<ul>
+						<li><p>Fully customizable</p></li>
+						<li><p>Has items on your whitelist</p></li>
+						<li><p>Simple items available</p></li>
+					</ul>
+					<div class="info">
+
+						<!-- Buttons to get the menu, and website  -->
+						<button>Menu</button>
+						<a href="#">Website</a>
+
+						<!-- Thing showing average rating in terms of 5 stars -->
+						<div class="star-container">
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+						</div>
+					</div>
+				</div>
+
 			</div>
 
 		</section>
