scuffed ul thing idk

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -55,11 +55,13 @@
 				<!-- When there are search results this will be shown -->
 				<div class="establishment-card">
 					<h2>Name of the place</h2>
-					<ul>
-						<li><p>Fully customizable</p></li>
-						<li><p>Has items on your whitelist</p></li>
-						<li><p>Simple items available</p></li>
-					</ul>
+					<div class="features">
+						<ul>
+							<li class="available">Fully customizable</li>
+							<li class="available">Has items on your whitelist</li>
+							<li>Simple items available</li>
+						</ul>
+					</div>
 					<div class="info">
 
 						<!-- Buttons to get the menu, and website  -->
@@ -81,11 +83,14 @@
 				
 				<div class="establishment-card">
 					<h2>Name of the place</h2>
-					<ul>
-						<li><p>Fully customizable</p></li>
-						<li><p>Has items on your whitelist</p></li>
-						<li><p>Simple items available</p></li>
-					</ul>
+					<div class="features">
+						<ul>
+							<li>Fully customizable</li>
+							<li class="available">Has items on your whitelist</li>
+							<li>Simple items available</li>
+						</ul>
+					</div>
+
 					<div class="info">
 
 						<!-- Buttons to get the menu, and website  -->
