Added whitelist and blacklist front end

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -44,6 +44,8 @@
 			<!-- Found local establishments -->
 			<div class="establishments">
 
+				<h1>Local establishments</h1>
+
 				<!-- When there is no search thingy this message will be shown -->
 				<!--!broken -->
 				<!--
@@ -121,8 +123,13 @@
 		<!-- food preferences -->
 		<!-- TODO: Rename class -->
 		<section class="preferences">
-			<h1>preferences</h1>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium ducimus minima? Itaque id ducimus nihil deleniti vel quidem recusandae saepe commodi eveniet quisquam qui, quaerat quasi odio ratione excepturi.</p>
+
+			<h1>Whitelist</h1>
+			<textarea placeholder="Food you do like"></textarea>
+
+			<h1>Blacklist</h1>
+			<textarea placeholder="Food you don't like"></textarea>
+
 		</section>
 
 	</main>
