establishment comes up in the list

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -61,60 +61,8 @@
 				</div>
 				-->
 
-				<!-- When there are search results this will be shown -->
-				<div class="establishment-card">
-					<h2>Name of the place</h2>
-					<div class="features">
-						<ul>
-							<li class="available">Fully customizable</li>
-							<li class="available">Has items on your whitelist</li>
-							<li>Simple items available</li>
-						</ul>
-					</div>
-					<div class="info">
+				<div class="cards">
 
-						<!-- Buttons to get the menu, and website  -->
-						<button>Menu</button>
-						<a href="#">Website</a>
-
-						<!-- Thing showing average rating in terms of 5 stars -->
-						<div class="star-container">
-							<p>
-								<i class="fa-solid fa-star"></i>
-								<i class="fa-solid fa-star"></i>
-								<i class="fa-solid fa-star"></i>
-								<i class="fa-solid fa-star"></i>
-								<i class="fa-solid fa-star"></i>
-							</p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="establishment-card">
-					<h2>Name of the place</h2>
-					<div class="features">
-						<ul>
-							<li>Fully customizable</li>
-							<li class="available">Has items on your whitelist</li>
-							<li>Simple items available</li>
-						</ul>
-					</div>
-
-					<div class="info">
-
-						<!-- Buttons to get the menu, and website  -->
-						<button>Menu</button>
-						<a href="#">Website</a>
-
-						<!-- Thing showing average rating in terms of 5 stars -->
-						<div class="star-container">
-							<i class="fa-solid fa-star"></i>
-							<i class="fa-solid fa-star"></i>
-							<i class="fa-solid fa-star"></i>
-							<i class="fa-solid fa-star"></i>
-							<i class="fa-solid fa-star"></i>
-						</div>
-					</div>
 				</div>
 
 			</div>
